--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/room_connect
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=Gfif2003
 
 # Setup for database platform
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
@@ -13,3 +13,5 @@ server.error.include-message=always
 jwt.header=Authorization
 jwt.secret=secretKey
 jwt.expiration=604800
+
+logging.config=classpath:log4j2.xml
