--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-message=always
+spring.jpa.open-in-view=false
 
 jwt.header=Authorization
 jwt.secret=secretKey
