--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=123
 # Setup for database platform
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 server.error.include-message=always
 spring.jpa.open-in-view=false
