Azure database connected

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 #datasource settings
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/room_connect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/room_connect
+#spring.datasource.username=postgres
+#spring.datasource.password=Gfif2003
+
+spring.datasource.url=jdbc:postgresql://romm-connect-db.postgres.database.azure.com:5432/postgres?sslmode=require
 spring.datasource.username=postgres
 spring.datasource.password=Gfif2003
 
